@@ -736,6 +736,13 @@ def _encode(s):
 class FTPFS(FS):
 
     _locals = threading.local()
+    
+    _meta = { 'virtual': False,
+              'read_only' : False,
+              'unicode_paths' : True,
+              'case_insensitive_paths' : False,
+              'may_block' : True
+              }
 
     def __init__(self, host='', user='', passwd='', acct='', timeout=_GLOBAL_DEFAULT_TIMEOUT,
                  port=21,
