@@ -19,6 +19,16 @@ class ReadOnlyFS(WrapFS):
     accidental modification.
     
     """
+    
+    def getmeta(self, meta_name, default=Ellipsis):
+        if meta_name == 'read_only':
+            return True
+        return self.wrapped_fs(meta_name, default)
+        
+    def hasmeta(self, meta_name):
+        if meta_name == 'read_only':
+            return True
+        return self.wrapped_fs(meta_name)
         
     def getsyspath(self, path, allow_none=False):
         """ Doesn't technically modify the filesystem but could be used to work
